--- a/inicio.html
+++ b/inicio.html
@@ -47,7 +47,8 @@
 <br>
 <br>
 <span class="content">
-    <video src="https://test413.000webhostapp.com/images/OLPESA%20-%20MEDIDAS%20DE%20PREVENCI%C3%93N%20FRENTE%20AL%20COVID-19.mp4" autoplay loop controls></video>
+    <video src="https://test413.000webhostapp.com/images/OLPESA%20-%20MEDIDAS%20DE%20PREVENCI%C3%93N%20FRENTE%20AL%20COVID-19.mp4" autoplay></video>
+
 </span>
 
 <br>
