--- a/contacto.html
+++ b/contacto.html
@@ -7,6 +7,7 @@
     <title>Contacto</title>
     <link rel="shortcut icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="contacto.css">
@@ -29,34 +30,37 @@
 <!-- Media -->
 
 
-    
 <!-- Formulario -->
-<h2>Contacto</h2>
-<form action="" method="post" enctype="application/x-www-form-urlencoded">
-    <label for="nombre">Nombre:</label>
-    <input type="text" name="nombre" placeholder="Escribe tu nombre" required>
-    <br>
-    <br>
-    <label for="apellido">Apellido:</label>
-    <input type="text" name="apellido" placeholder="Escribe tu apellido" required>
-    <br>
-    <br>
-    <label for="celular">Celular:</label>
-    <input type="tel" id="celular" name="celular" placeholder="Escribe tu numero de celular"  pattern="[+]{1}[0-9]{11,14}" required>
-    <br>
-    <br>
-    <label for="email">Correo Electronico:</label>
-    <input type="email" name="email" placeholder="Escribe tu correo electronico" required>
-    <br>
-    <br>
-    <label for="comentarios">Comentarios:</label>
-    <br>
-    <textarea name="comentarios" id="" cols="30" rows="10" placeholder="escribe tus comentarios"></textarea>
-    <br>
-    <input type="submit" name="Enviar" id="submit">
-    <input type="reset" name="Resetear" id="reset">
 
-</form>
+<div class="container mt-5">
+    <h1>Contacto</h1>
+    <form class="row g-3">
+      <div class="col-md-6">
+        <label for="firstName" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="firstName" required>
+      </div>
+      <div class="col-md-6">
+        <label for="lastName" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="lastName" required>
+      </div>
+      <div class="col-md-8">
+        <label for="emailInfo" class="form-label">E-mail</label>
+        <input type="email" class="form-control" id="emailInfo" required>
+      </div>
+      <div class="col-md-4">
+        <label for="phoneNumber" class="form-label">Numero de celular</label>
+        <input type="text" class="form-control" id="phoneNumber" placeholder="+51 952437193">
+      </div>
+      <div class="col-md-12">
+        <label for="comments" class="form-label">Commentarios:</label>
+        <textarea class="form-control" id="comments" rows="3" required></textarea>
+      </div>
+      <div class="col-md-12">
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </div>
+    </form>
+</div>
+
 
 <!-- Footer -->
 <hr>
