--- a/contacto.html
+++ b/contacto.html
@@ -8,9 +8,11 @@
     <link rel="shortcut icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="contacto.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="contacto.css">
+    <meta name="description" content="Contactanos, ecribenos para mas informacion">
+    <meta name="keywords"  content="Contacto, Mail, Numero, Direccion">
 </head>
 <body>
     <!-- Header -->
