--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olpesa</title>
     <link rel="stylesheet" href="index.css">
+    <meta name="description" content="Olpesa">
+    <meta name="keywords"  content="Contacto, Mail, Numero, Direccion, Olpesa, Aceite de palma, Peru">
 
 </head>
 
-    
 <body>
     <span>
         <iframe src="audio/silence.mp3" type="audio/mp3" allow="autoplay" id="audio" style="display:none"></iframe>
