--- a/productos.html
+++ b/productos.html
@@ -7,12 +7,13 @@
     <title>Productos</title>
     <link rel="shortcut icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="productos.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="productos.css">
+    <meta name="description" content="Productos, Aceite de palma y derivados">
+    <meta name="keywords"  content="Productos, Aceite de palma, Olpesa, Derivados">
 </head>
 <body>
-    
 <!-- Header -->
 <div class="header">
     <nav>
