--- a/productos.html
+++ b/productos.html
@@ -29,37 +29,16 @@
 </div>
 
 <!-- Media -->
-
+<div id="first-img">
 <img id="image1" src="http://www.olpesa.com/sites/default/files/product1.png" alt="aceite de palma">
 <div id="text1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro qui enim distinctio laborum voluptatem est ut consequatur omnis commodi cupiditate hic, culpa vero ullam veniam placeat ducimus eius? Est, quia?</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+</div>
+
+<div id="second-img">
 <img id="image2" src="http://www.olpesa.com/sites/default/files/product1.png" alt="aceite de palma">
 <div id="text2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro qui enim distinctio laborum voluptatem est ut consequatur omnis commodi cupiditate hic, culpa vero ullam veniam placeat ducimus eius? Est, quia?</div>
+</div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <!-- Footer -->
 <hr>
 <footer class="footer-distributed">
