--- a/sosteniblidad.html
+++ b/sosteniblidad.html
@@ -7,12 +7,13 @@
     <title>Sostenibilidad</title>
     <link rel="shortcut icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="sostenibilidad.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sostenibilidad.css">
+    <meta name="description" content="Sostenibilidad en Olpesam, cuidado del medio ambiente">
+    <meta name="keywords"  content="Medio ambiente, nuestor compromiso, cuidado del medio ambiente">
 </head>
 <body>
-    
 <!-- Header -->
 <div class="header">
     <nav>
