--- a/empresa.html
+++ b/empresa.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="empresa.css">
+    <link rel="stylesheet" href="olpesa.css">
     <meta name="description" content="Olpesa como empresa, quienes somos">
     <meta name="keywords"  content="Empresa, Nosotros, About us, Quienes somos">
 </head>
