--- a/inicio.html
+++ b/inicio.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="inicio.css">
+    <link rel="stylesheet" href="olpesa.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
     <meta name="description" content="Olpesa, Peru, Lima, Tocache, Aceite de palma.">
     <meta name="keywords"  content="Palm Oil, Aceite de Palma">
