--- a/sosteniblidad.html
+++ b/sosteniblidad.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="images/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="olpesa.css">
     <meta name="description" content="Sostenibilidad en Olpesam, cuidado del medio ambiente">
